--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
         <section class="presentacion-contenido">
             <h1>Eleve tu negocio digital a otro nivel <strong class="title-strong">con un Front-end de calidad!</strong>
             </h1>
-            <p class="presentacion-texto">¡Hola! Soy <strong class="name-strong">Ana García</strong>, desarrolladora Front-end <br>
+            <p class="presentacion-texto">¡Hola! Soy <strong class="name-strong">Ana García</strong>, desarrolladora
+                Front-end <br>
                 con especialización en React, HTML y CSS. <br>
                 Ayudo a pequeños negocios y diseñadores a llevar a cabo buenas ideas. <br> ¿Hablamos?
             </p>
-            <span><a href="instagram.com">Instagram</a></span>
-            <span><a href="github.com">Github</a></span>
+
+            <div class="presentacion-redes">
+                <a class="presentacion-links" href="instagram.com">Instagram</a>
+                <a class="presentacion-links" href="github.com">Github</a>
+            </div>
         </section>
 
-        <img src="img/Imagem.png" alt="Ana García" width="200" height="200">
+        <img src="img/Imagem.png" alt="Ana García" width="48" height="55">
 
     </main>
 
