--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
             </p>
 
             <div class="presentacion-redes">
+                <h2 class="presentacion-redes-subtitulo">Accede a mis redes:</h2>
                 <a class="presentacion-links" href="instagram.com">Instagram</a>
+                <a class="presentacion-links" href="git.com">LinkIn</a>
                 <a class="presentacion-links" href="github.com">Github</a>
             </div>
         </section>
 
-        <img src="img/Imagem.png" alt="Ana García" width="48" height="55">
+        <img src="assets/Imagem.png" alt="Ana García" width="48" height="55">
 
     </main>
 
