se agrego iconos a links y footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav class="header-menu">
+            <a class="header-menu-link" href="">Home</a>
+            <a class="header-menu-link" href="">About</a>
+
+        </nav>
+
+    </header>
 
     <main class="presentacion">
         <section class="presentacion-contenido">
@@ -23,9 +30,12 @@
 
             <div class="presentacion-redes">
                 <h2 class="presentacion-redes-subtitulo">Accede a mis redes:</h2>
-                <a class="presentacion-links" href="instagram.com">Instagram</a>
-                <a class="presentacion-links" href="git.com">LinkIn</a>
-                <a class="presentacion-links" href="github.com">Github</a>
+                <a class="presentacion-links" href="instagram.com"> 
+                    <img src="assets/instagram.png" alt=""> Instagram</a>
+                <a class="presentacion-links" href="git.com"> 
+                    <img src="assets/linkedin.png" alt=""> LinkIn</a>
+                <a class="presentacion-links" href="github.com"> 
+                    <img src="assets/github.png" alt=""> Github</a>
             </div>
         </section>
 
@@ -33,7 +43,10 @@
 
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+        <p class="foot-p">&copy;David Villaman</p>
+        <a href="https://github.com/David-Villaman" class="github-link"><img src="assets/github.svg"></a>
+    </footer>
 </body>
 
 </html>
