--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav class="header-menu">
-            <a class="header-menu-link" href="">Home</a>
-            <a class="header-menu-link" href="">About</a>
+            <a class="header-menu-link" href="index.html">Home</a>
+            <a class="header-menu-link" href="about.html">About</a>
 
         </nav>
 
