Se creo pagina curriculum

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <nav class="header-menu">
             <a class="header-menu-link" href="index.html">Home</a>
             <a class="header-menu-link" href="about.html">About</a>
-
+            <a class="header-menu-link" href="curriculum.html">Curriculum</a>
         </nav>
 
     </header>
 
     <main class="presentacion">
         <section class="presentacion-contenido">
-            <h1>Eleve tu negocio digital a otro nivel <strong class="title-strong">con un Front-end de calidad!</strong>
+            <h1 class="presentacion-contenido-titulo">Eleve tu negocio digital a otro nivel <strong class="title-strong">con un Front-end de calidad!</strong>
             </h1>
             <p class="presentacion-texto">¡Hola! Soy <strong class="name-strong">Ana García</strong>, desarrolladora
                 Front-end <br>
