--- a/about.html
+++ b/about.html
@@ -13,12 +13,12 @@
         <nav class="header-menu">
             <a class="header-menu-link" href="index.html">Home</a>
             <a class="header-menu-link" href="about.html">About</a>
-
+            <a class="header-menu-link" href="curriculum.html">Curriculum</a>
         </nav>
     </header>
     <main class="presentacion">
         <section class="presentacion-contenido">
-            <h1>Sobre mi</h1>
+            <h1 class="presentacion-contenido-titulo">Sobre mi</h1>
             <p class="presentacion-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, veniam dolores totam magnam qui quisquam eius sequi rerum modi deserunt maiores sapiente molestias exercitationem iure voluptatibus dignissimos, explicabo, officiis illo.</p>
             <p class="presentacion-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti unde magnam aspernatur rerum ipsam dolor ullam inventore. Dicta eaque eligendi quia eos tenetur maiores, vero accusantium doloremque libero. Laudantium, suscipit.</p>
         </section>
