se creo pagina curriculum y mejoro style

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
     <footer class="footer">
         <p class="foot-p">&copy;David Villaman</p>
-        <a href="https://github.com/David-Villaman" class="github-link"><img src="assets/github.svg"></a>
+        <a href="https://github.com/David-Villaman" class="github-link"><img src="assets/github.svg" width="48" height="55"></a>
     </footer>
 </body>
 
