--- a/curriculum.html
+++ b/curriculum.html
@@ -26,15 +26,15 @@
 
             </p>
             <h2 class="presentacion-contenido-titulo">Experiencias</h2>
-            <p class="presentacion__contenido__texto">
-            <ul class="presentacion__contenido__texto">
+            <p class="presentacion-texto">
+            <ul class="presentacion-texto">
                 <li> Empresa en que trabajó (2020 - 2021) - tú ocupación ahí </li>
                 <li> Empresa en que trabajó (2021 - 2023) - tú ocupación ahí </li>
             </ul>
             </p>
-            <h2 class="presentacion__contenido__titulo">Estudios</h2>
-            <div class="presentacion__contenido__texto">
-                <ul class="presentacion__contenido__texto">
+            <h2 class="presentacion-contenido-titulo">Estudios</h2>
+            <div class="presentacion-texto">
+                <ul class="presentacion-texto">
                     <li>Curso nombre - Alura Cursos <a href="linkdelacertificacion">con la certificación</a> </li>
                     <li>Curso nombre - Alura Cursos <a href="linkdelacertificacion">con la certificación</a></li>
                     <li>Curso nombre - Alura Cursos <a href="linkdelacertificacion">con la certificación</a></li>
@@ -46,9 +46,9 @@
     </main>
     <footer class="footer">
         <p class="foot-p">&copy;David Villaman</p>
-        <a href="https://github.com/David-Villaman" class="github-link"><img src="assets/github.svg"></a>
+        <a href="https://github.com/David-Villaman" class="github-link"><img src="assets/github.svg" width="48"
+                height="55"></a>
     </footer>
-
 </body>
 
 </html>
