se agrego responsividad en style

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </section>
 
 
-        <img src="assets/Imagem.png" alt="Ana García" width="48" height="55">
+        <img class="presentacion-imagen" src="assets/Imagem.png" alt="Ana García" >
     </main>
 
     <footer class="footer">
