--- a/curriculum.html
+++ b/curriculum.html
@@ -42,7 +42,7 @@
             </div>
 
         </section>
-        <img src="./assets/Imagem.png" alt="Ana García" width="48" height="55">
+        <img class="presentacion-imagen" src="./assets/Imagem.png" alt="Ana García" >
     </main>
     <footer class="footer">
         <p class="foot-p">&copy;David Villaman</p>
