--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </section>
 
-        <img src="assets/Imagem.png" alt="Ana García" width="48" height="55">
+        <img class="presentacion-imagen" src="assets/Imagem.png" alt="Ana García" >
 
     </main>
 
